--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -2,7 +2,7 @@
     <div class="align-self-center text-center">
         <div class="spinner-border text-dark" role="status">
             <span class="sr-only">Processing...</span>
-          </div>
+        </div>
         <div class="text-secondary mt-2">Processing...</div>
     </div>
 </div>
@@ -11,7 +11,7 @@
 
 <div class="d-flex mb-4">
     <div>
-        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect('reset')" [selectOnEnter]="true">
+        <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect(null)" [selectOnEnter]="true">
         </odp-search-box>
     </div>
     <div class="d-flex ml-auto mr-2">
@@ -25,9 +25,36 @@
 
 
 <div class="grid-container">
-    <ag-grid-angular #agGrid class="ag-theme-balham table" [gridOptions]="gridOptions" (gridReady)="onGridReady($event)"
-        [frameworkComponents]="frameworkComponents">
-    </ag-grid-angular>
+    <div class="scroll-pane">
+        <div class="list-group mb-3">
+            <div class="list-group-item header py-0 bg-light text-muted text-uppercase font-11">
+                <div class="d-flex align-items-center justify-content-between h-100">
+                    <div class="d-flex-1">LABEL</div>
+                    <div class="d-flex-1">TYPE</div>
+                    <div class="d-flex-1">VALUE</div>
+                    <div class="group-actions"></div>
+                </div>
+            </div>
+            <div class="list-group-item" *ngFor="let attr of data">
+                <div class="d-flex align-items-center justify-content-between">
+                    <div class="d-flex-1">{{attr.label}}</div>
+                    <div class="d-flex-1">{{attr.type}}</div>
+                    <div class="d-flex-1">{{attr.value}}</div>
+
+                    <div class="group-actions">
+                        <button type="button" class="btn btn-link text-muted p-1" (click)="openEditAttributeModal(attr)"
+                            *ngIf="hasPermission('PMBU')">
+                            <span class="dsi dsi-edit"></span>
+                        </button>
+                        <button type="button" class="btn btn-link text-muted p-1" (click)="deleteAdditionInfo(attr.key)"
+                            *ngIf="hasPermission('PMBU')">
+                            <span class="dsi dsi-trash"></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
