--- a/src/styles.scss
+++ b/src/styles.scss
@@ -922,3 +922,7 @@ $odp-ui-author-theme: mat-light-theme((color: (primary: $odp-ui-author-primary,
 .icon-primary {
   color: $orange
 }
+
+.btn-delete {
+  background: $red;
+}
