--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -37,7 +37,7 @@
                   id="password" #password placeholder="xxxxxxxxx" (keyup.enter)="onSubmit($event)" />
 
                 <!-- <a href="#" class="text-secondary">Forgot your Password?</a> -->
-                <button type="button" class="btn btn-lg btn-primary input-text" (click)="onSubmit($event)"
+                <button type="button" class="btn btn-lg btn-primary input-text form-button" (click)="onSubmit($event)"
                   style="margin-top: 20px">
                   <span *ngIf="loader" class="fa fa-spinner fa-pulse mr-2"></span>
                   <span class="btn-text">Login</span>
